force-app/main/default/objects/LLC_BI__Document_Store__c/fields/LLC_BI__Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Internal__c</fullName>
    <description>This field is optional and auto-populates. This field indicates that the file associated with this document store is stored in Salesforce.</description>
    <formula>IF(ISPICKVAL(LLC_BI__Type__c, &apos;Salesforce Attachment&apos;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>