force-app/main/default/objects/LLC_BI__Document_Store__c/fields/LLC_BI__Non_Unique_External_Identifier__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Non_Unique_External_Identifier__c</fullName>
    <description>This field is not required but is generally automatically populated when used. This field stores the identifier of an external document in the external repository. It can specify the URL or some other type of key.</description>
    <externalId>true</externalId>
    <label>Non Unique External Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>