force-app/main/default/objects/LLC_BI__Document_Store__c/fields/LLC_BI__Ready_For_Esignature__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ready_For_Esignature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. This field indicates that a file is E-Signature ready.</description>
    <label>E-Signature Ready</label>
    <type>Checkbox</type>
</CustomField>