force-app/main/default/objects/LLC_BI__Document_Store__c/fields/NDOC__Filenet_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>NDOC__Filenet_Document_Id__c</fullName>
    <description>--DEPRECATED--</description>
    <label>-D Filenet Document Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>